Added the backround to allow for showing planets

--- a/templates/main.html
+++ b/templates/main.html
@@ -4,4 +4,45 @@
 
 <p>Main body</p>
 
+Session: <input type="text" id="session"/>
+<button onclick="setSession()">Set Session</button>
+
+
+<script type="text/javascript">
+  //Sets The session on the backend 
+function setSession(){
+      //Checks if the there is data inserted into the input text variable
+      if(document.getElementById("session").value.length != 0)
+      {
+          //Custom Ajax call to get data about the current session
+          $.ajax({
+              //The API endpoint to call.
+              url: 'http://127.0.0.1:5000/session',
+              //The Method type.
+              method: 'POST',
+              //Headers in the request
+              headers: {
+                  session: document.getElementById("session").value
+              },
+              //If the ajax call is successfull this method will be called.
+              success: function(data){
+                  //printSessionStatus(data);
+                  window.location.href = "http://127.0.0.1:5000/";
+              },
+              error: function(data){
+                alert("Call failed")
+              }
+              
+      });
+  }
+  }
+  /*
+  // Shows the session on the screen
+  function printSessionStatus(json){
+      //fetches the document and writes into the html the data gotten in the field session
+      document.getElementById("json").innerHTML = (JSON.stringify(json.session));
+  }
+  */
+</script>
+
 {% endblock %}
