--- a/templates/planet.html
+++ b/templates/planet.html
@@ -8,10 +8,33 @@
 </head>
 <body>
     <script>
-        while(true){
-            setTimeout(4000);
-            document.appendChild("Hello");
-        }
+        
+       function setSession(){
+        //Checks if the there is data inserted into the input text variable
+		if(document.getElementById("session").value.length != 0)
+		{
+			//Custom Ajax call to get data about the current session
+			$.ajax({
+				//The API endpoint to call.
+				url: 'http://127.0.0.1:5000/session',
+				//The Method type.
+				method: 'POST',
+				//Headers in the request
+				headers: {
+					session: document.getElementById("session").value
+				},
+				//If the ajax call is successfull this method will be called.
+				success: function(data){
+					printSessionStatus(data);
+				}
+		});
+	}
+	}
+	// Shows the session on the screen
+	function printSessionStatus(json){
+		//fetches the document and writes into the html the data gotten in the field session
+		document.getElementById("json").innerHTML = (JSON.stringify(json.session));
+	}
 
 
     </script>
