Bootstrap dark theme

--- a/templates/header.html
+++ b/templates/header.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Python Programming Tutorials</title>
+	<title>Team solar system</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
+	<link href="{{ url_for('static', filename='bootstrap_dark/css/bootstrap.min.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='fontawesome/css/all.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='custom/css/main.css') }}" rel="stylesheet">
 	<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
@@ -87,16 +87,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="texts.php">Texts</a>
+                    <a class="nav-link" href="texts.php">Planet inspector</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="newgitrepo.php">Nyt projekt</a>
+                    <a class="nav-link" href="newgitrepo.php">Some other stuff</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="guides.php">Guides</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="profile.php">Mine projekter</a>
+                    <a class="nav-link" href="guides.php">Bla</a>
                 </li>
             </ul>
 
