Pepe easter egg

--- a/templates/planet.html
+++ b/templates/planet.html
@@ -9,7 +9,7 @@
 <div class="bd-example carousel-fade">
   <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
-      <li data-target="#carouselExampleCaptions" data-slide-to="0"></li>
+      <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
       <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
       <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
       <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
@@ -26,7 +26,11 @@
           <div class="container">
           <div class="row">
             <div class="col-sm">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed fringilla dapibus quam sed blandit. Aenean lacinia lorem sed nisi pellentesque interdum. Sed eget suscipit metus, et feugiat metus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed fringilla dapibus quam sed blandit. Aenean lacinia lorem sed nisi pellentesque interdum. Sed eget suscipit metus, et feugiat metus.</p>
+                <i class="fas fa-car"></i>
+                <i class="fas fa-bus-alt"></i>
+                <i class="fas fa-elephant"></i>
+                <i class="fas fa-futbol"></i>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed fringilla dapibus quam sed blandit. Aenean lacinia lorem sed nisi pellentesque interdum. Sed eget suscipit metus, et feugiat metus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed fringilla dapibus quam sed blandit. Aenean lacinia lorem sed nisi pellentesque interdum. Sed eget suscipit metus, et feugiat metus.</p>
             </div>
             <div class="col-6">
                 <img src="/static/resources/images/Sun.png" class="d-block w-100 img-responsive" alt="Sun">
@@ -34,12 +38,6 @@
             <div class="col-sm">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed fringilla dapibus quam sed blandit. Aenean lacinia lorem sed nisi pellentesque interdum. Sed eget suscipit metus, et feugiat metus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed fringilla dapibus quam sed blandit. Aenean lacinia lorem sed nisi pellentesque interdum. Sed eget suscipit metus, et feugiat metus.</p>
             </div>
-          </div>
-        </div>
-        <div class="carousel-caption d-none d-md-block">
-          <div class="p-3 mb-2 bg-dark text-white">
-            <h5 class="text-light">Da sun</h5>
-            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
           </div>
         </div>
       </div>
@@ -122,6 +120,12 @@
             <h5 class="text-light">Pluto</h5>
             <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
           </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+          <div class="container">
+             <img src="/static/resources/images/Pepe.jpeg" class="d-block w-100 img-responsive" alt="Sun">
+              <p>Feels bad man</p>
         </div>
       </div>
     </div>
