Distance car, bus...

--- a/templates/header.html
+++ b/templates/header.html
@@ -15,6 +15,10 @@
 <script src="{{ url_for('static', filename='jquery/jquery.min.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
 
+<!--Custom-->
+<script type="text/javascript" src="{{ url_for('static', filename='/custom/js/main.js') }}"></script>
+
+
 <div class="star_background"></div>
 <div class="star_background_twinkling"></div>
 
