--- a/templates/planet.html
+++ b/templates/planet.html
@@ -26,10 +26,23 @@
           <div class="container">
           <div class="row">
             <div class="col-sm">
-                <i class="fas fa-car"></i>
-                <i class="fas fa-bus-alt"></i>
-                <i class="fas fa-elephant"></i>
-                <i class="fas fa-futbol"></i>
+                <div class="container">
+                  <div class="row">
+                      <div class="col"><h5><i class="fas fa-car" data-toggle="tooltip" data-placement="top" title="Car"></i></h5></div>
+                      <div class="col"><h5>x</h5></div>
+                      <div class="col"><h5>2</h5></div>
+                      <div class="w-100"></div>
+                      <div class="col"><h5><i class="fas fa-bus-alt" data-toggle="tooltip" data-placement="top" title="Bus"></i></h5></div>
+                      <div class="col"><h5>x</h5></div>
+                      <div class="col"><h5>2</h5></div>
+                      <div class="w-100"></div>
+                      <div class="col"><h5><i class="fas fa-futbol" data-toggle="tooltip" data-placement="top" title="Football fields"></i></h5></div>
+                      <div class="col"><h5>x</h5></div>
+                      <div class="col"><h5>2</h5></div>                  </div>
+                </div>
+
+
+
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed fringilla dapibus quam sed blandit. Aenean lacinia lorem sed nisi pellentesque interdum. Sed eget suscipit metus, et feugiat metus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed fringilla dapibus quam sed blandit. Aenean lacinia lorem sed nisi pellentesque interdum. Sed eget suscipit metus, et feugiat metus.</p>
             </div>
             <div class="col-6">
